--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -38,3 +38,24 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+
+  deploy:
+    if: GITHUB_REF_NAME == "master"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.x'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install build
+      - name: Build package
+        run: python -m build
+      - name: Publish package
+        uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+        with:
+          user: __token__
+          password: "test" #${{ secrets.PUBLIC_PYPI_ACCESS_TOKEN }}
