--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -40,7 +40,7 @@ jobs:
         pytest
 
   deploy:
-    if: ${{ deploy.steps.env.GITHUB_REF_NAME == "master" }}
+    if: ${{ jobs.deploy.steps.env.GITHUB_REF_NAME == "master" }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
