--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -9,6 +9,9 @@ on:
   pull_request:
     branches: [ master, develop ]
 
+env:
+  BRANCH_NAME: env.GITHUB_REF_NAME
+
 jobs:
   build:
 
@@ -40,7 +43,8 @@ jobs:
         pytest
 
   deploy:
-    if: ${{ jobs.deploy.steps.env.GITHUB_REF_NAME == "master" }}
+    if: env.BRANCH_NAME == "master"
+
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
