--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -40,7 +40,7 @@ jobs:
         pytest
 
   deploy:
-    if: github.ref_name == "master"
+    if: github.ref_name == 'master'
 
     runs-on: ubuntu-latest
     steps:
