--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -40,7 +40,7 @@ jobs:
         pytest
 
   deploy:
-    if: github.ref_name == 'develop'
+    if: github.ref_name == 'master'
     needs: 'build'
 
     runs-on: ubuntu-latest
