ci: catch up with new tools and python release

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -16,12 +16,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
 
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@4
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
@@ -57,7 +57,8 @@ jobs:
       - name: Build package
         run: python -m build
       - name: Publish package
-        uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+        uses: pypa/gh-action-pypi-publish@release/v1
         with:
+          skip_existing: true
           user: __token__
           password: ${{ secrets.PUBLIC_PYPI_ACCESS_TOKEN }}
