--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ fail_under = 100
 
 [tool.pytest.ini_options]
 testpaths = [
+    "tests/functional",
     "tests/e2e",
     "tests/integration",
     "tests/unit"
